# backend/src/routes/orders-routes.ts
@@ -1,8 +1,9 @@
 import { Router } from 'express';
-import { createOrder } from '../controllers/orders-controller';
+import { createOrder, getMyOrders } from '../controllers/orders-controller';
 
 const router = Router();
 
+router.get('/my', getMyOrders);
 router.post('/', createOrder);
 
 export default router;
