# backend/src/services/orders/orders-service.types.ts
@@ -10,3 +10,12 @@ export interface CreateOrderResult {
   order: Order;
   items: OrderItem[];
 }
+
+export interface OrderWithItems {
+  order: Order;
+  items: OrderItem[];
+}
+
+export interface GetMyOrdersResult {
+  orders: OrderWithItems[];
+}
